<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_results">No Quotes</string>

    <string name="action_settings">Settings</string>
    <string name="action_new_quote">New Quote</string>
    <string name="action_new_source">New Source</string>
    <string name="action_new_category">New Category</string>
    <string name="action_new">Add New</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_export">Export</string>

    <string name="action_search">Search</string>

    <string name="about">About</string>
    <string name="export">Export</string>

    <!-- New Quote Activity-->
    <string name="new_quote_hint">Quote</string>
    <string name="page_hint">Page</string>

    <!--Sources-->
    <string name="source_name_hint">Title</string>
    <string name="source_description_hint">Description</string>
    <string name="source_author_name_hint">Author</string>

    <string name="view_all_sources">View All Sources</string>
    <string name="no_sources">No Sources</string>
    <string name="no_sources_hint">Add a source by selecting NEW SOURCE</string>

    <string name="delete_source_message">Are you sure you want to delete this source? Deleting this source will delete all of its quotes.</string>


    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="visible_categories">Visible Categories:</string>
    <string name="category_name_hint">Category Name</string>
    <string name="category_delete_message">Are you sure you want to delete this category? Deleting this category will remove it from all quotes.</string>
    <string name="click_to_select_categories">Click to Select Categories</string>
    <string name="click_to_select_visible_categories">Click to Select Visible Categories</string>
    <string name="select_categories">Select Categories</string>
    <string name="delete_category">Delete Category</string>

    <string name="no_categories">No Categories</string>
    <string name="view_all_categories">View All</string>
    <string name="no_categories_hint">Add a category by selecting NEW CATEGORY or ADD NEW in the categories page.</string>

    <string name="source_required">Please Create A Source Before Adding A Quote</string>

    <!--Constants-->
    <string name="category_extra">CATEGORY</string>
    <string name="all_categories">ALL_CATEGORIES</string>
    <string name="MAIN_ACTIVITY">MAIN_ACTIVITY</string>
    <string name="IS_UNCATEGORIZED_VISIBLE">IS_UNCATEGORIZED_VISIBLE</string>
    <string name="image_content">Image</string>

    <!--Drawer-->
    <string name="open_drawer">Open</string>
    <string name="close_Drawer">Close</string>

    <!--Drawer-->
    <string name="search">Search</string>

</resources>
