<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_weight="3"
            android:id="@+id/sourceSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:maxLength="5"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="number"
            android:gravity="center"
            android:id="@+id/pageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/page_hint"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"

            android:paddingTop="@dimen/half_padding"
            android:paddingBottom="@dimen/half_padding"

            android:layout_marginBottom="8dp"

            android:clickable="true"
            android:background="@drawable/selector_transparent_shadow_pressed"
            android:id="@+id/categoryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="16dp"
                android:hint="@string/click_to_select_categories"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:id="@+id/categoriesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <EditText
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"

            android:minHeight="48dp"
            android:id="@+id/quoteEditText"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_quote_hint"
            android:layout_alignParentTop="true"
            android:layout_above="@id/categoryView"/>

    </RelativeLayout>

</LinearLayout>